--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -2013,6 +2013,201 @@
     "result3 = sum(pred >= 0.3)\n",
     "print(result3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "284b823c",
+   "metadata": {},
+   "source": [
+    "📝 [제3유형] 유의하지 않은 변수 탐색 (다중회귀)\n",
+    "문제 1. (유의하지 않은 변수 개수) Price를 종속변수로 하고, 나머지 모든 변수(Size, Rooms, Year, Distance, Lucky_Num)를 독립변수로 하는 **다중선형회귀 모델(OLS)**을 적합하시오. 유의수준 0.05 하에서 통계적으로 유의하지 않은(p-value > 0.05) 설명변수의 개수를 구하시오. (단, 절편항(Intercept)은 개수에서 제외하시오.)\n",
+    "\n",
+    "문제 2. (가장 유의하지 않은 변수) 위 모델에서 p-value가 가장 큰(가장 유의하지 않은) 변수의 이름을 적으시오.\n",
+    "\n",
+    "문제 3. (수정된 결정계수) 위 모델의 설명력을 나타내는 수정된 결정계수(Adjusted R-squared) 값을 구하시오. (단, 소수점 셋째 자리에서 반올림하여 둘째 자리까지 출력하시오.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "55e77ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "        Size  Rooms  Year  Distance  Lucky_Num       Price\n",
+      "0  29.076098      1  2014  3.753131          6  155.242173\n",
+      "1  37.342856      3  1992  8.255590          2  187.675429\n",
+      "2  15.611180      4  2017  3.419036          6  109.319247\n",
+      "3  23.365780      1  2020  8.985747          2  132.536119\n",
+      "4  28.992719      3  2015  3.060076          4  162.630936\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n = 300\n",
+    "\n",
+    "# 독립변수 생성\n",
+    "data = {\n",
+    "    'Size': np.random.normal(30, 10, n),      # 평수\n",
+    "    'Rooms': np.random.randint(1, 6, n),      # 방 개수\n",
+    "    'Year': np.random.randint(1990, 2023, n), # 건축 연도\n",
+    "    'Distance': np.random.normal(5, 2, n),    # 역까지 거리 (가짜 변수)\n",
+    "    'Lucky_Num': np.random.randint(1, 10, n)  # 행운의 숫자 (가짜 변수)\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 종속변수(Price) 생성\n",
+    "# 가격 = 평수*5 + 방*2 + (연도-1990)*0.5 + 오차\n",
+    "# (Distance와 Lucky_Num은 가격 결정 식에 포함되지 않음 -> 유의하지 않아야 함)\n",
+    "df['Price'] = (5 * df['Size']) + (2 * df['Rooms']) + (0.5 * (df['Year'] - 1990))\n",
+    "df['Price'] += np.random.normal(0, 5, n) # 노이즈 추가\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "891dd5b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Distance\n",
+      "0.9901308799657466\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "from statsmodels.formula.api import ols\n",
+    "model = ols('Price ~ Size + Rooms + Year + Distance + Lucky_Num', data=df).fit()\n",
+    "p_val = model.pvalues[1:]\n",
+    "#print(p_val)\n",
+    "count = sum(p_val > 0.05)\n",
+    "print(count)\n",
+    "\n",
+    "# 문제 2번\n",
+    "worst_val = p_val.idxmax()\n",
+    "print(worst_val)\n",
+    "\n",
+    "# 문제 3번\n",
+    "adj = model.rsquared_adj\n",
+    "print(adj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6049b37",
+   "metadata": {},
+   "source": [
+    "📝 [제3유형] F-검정 & 합동분산추정량\n",
+    "\n",
+    "문제 1. (F-검정 통계량)두 기계(A, B)의 제품 무게(Weight) 분산이 같은지 확인하기 위해 F-검정을 수행하려고 합니다.**A 기계의 분산($s_A^2$)**과 **B 기계의 분산($s_B^2$)**을 각각 구한 후, F-검정 통계량을 구하시오.(단, F-통계량은 큰 분산을 작은 분산으로 나눈 값으로 정의하며, 분산 계산 시 ddof=1(불편분산)을 사용하시오. 결과는 소수 셋째 자리까지 반올림하여 출력하시오.)\n",
+    "\n",
+    "문제 2. (합동분산추정량)위 1번의 결과와 관계없이, 두 기계의 모분산이 같다고 가정(equal_var=True)합니다.이때 두 집단의 분산을 하나로 합친 **합동분산추정량(Pooled Variance, $s_p^2$)**을 구하시오.(단, 반올림하여 소수 셋째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 3. (t-검정)합동분산추정량을 사용하여(즉, 등분산을 가정하고) 두 기계 A, B의 평균 무게에 차이가 있는지 독립표본 t-검정을 수행하시오.이때의 **p-값(p-value)**을 구하시오.(단, 반올림하여 소수 넷째 자리까지 출력하시오.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9174c0fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "  Machine      Weight\n",
+      "0       A  199.538049\n",
+      "1       A  203.671428\n",
+      "2       A  192.805590\n",
+      "3       A  196.682890\n",
+      "4       A  199.496360\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n = 30 # 표본 크기 30개\n",
+    "\n",
+    "# 데이터 생성 (분산이 비슷하게 설정됨)\n",
+    "group_a = np.random.normal(200, 5, n)       # 평균 200, 표준편차 5\n",
+    "group_b = np.random.normal(202, 5.5, n)     # 평균 202, 표준편차 5.5\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Machine': ['A']*n + ['B']*n,\n",
+    "    'Weight': np.concatenate([group_a, group_b])\n",
+    "})\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "#print(df.groupby('Machine')['Weight'].describe())\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "3c23aa5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.471\n",
+      "24.078\n",
+      "0.3538\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "group_A = df[df['Machine']=='A']['Weight']\n",
+    "group_B = df[df['Machine']=='B']['Weight']\n",
+    "\n",
+    "import numpy as np\n",
+    "A_var = np.var(group_A, ddof = 1)\n",
+    "B_var = np.var(group_B, ddof = 1)\n",
+    "\n",
+    "if A_var > B_var:\n",
+    "    f_stat = A_var / B_var\n",
+    "else:\n",
+    "    f_stat = B_var / A_var\n",
+    "\n",
+    "print(round(f_stat, 3))\n",
+    "\n",
+    "# 문제 2번\n",
+    "A_n = len(group_A)\n",
+    "B_n = len(group_B)\n",
+    "\n",
+    "pool_var = ((A_n - 1)*A_var + (B_n - 1)*B_var) / ((A_n - 1) + (B_n - 1))\n",
+    "print(round(pool_var, 3))\n",
+    "\n",
+    "# 문제 3번\n",
+    "from scipy.stats import ttest_ind\n",
+    "t_stat, p_val = ttest_ind(group_A, group_B, equal_var=True)\n",
+    "print(round(p_val, 4))"
+   ]
   }
  ],
  "metadata": {
