--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 202,
    "id": "2fa1656e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 203,
    "id": "88f81e4b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 204,
    "id": "4ed4de67",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 205,
    "id": "b77e17bf",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 206,
    "id": "aa070290",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 207,
    "id": "a8437069",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 208,
    "id": "106e157d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 209,
    "id": "ce0c4c76",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 210,
    "id": "2e06b990",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 211,
    "id": "b4ed9a6f",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 212,
    "id": "cf932e6a",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 213,
    "id": "ba7f3002",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 214,
    "id": "1ef011f6",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 215,
    "id": "8cefe8ca",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 216,
    "id": "ca8321de",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 217,
    "id": "62786703",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 218,
    "id": "b3fe2a60",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 219,
    "id": "f0050a48",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 220,
    "id": "c49c47b1",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 221,
    "id": "087ea252",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_12936\\3975182502.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_15296\\3975182502.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 222,
    "id": "19a63283",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 223,
    "id": "8e2b5fd3",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 224,
    "id": "9f8ca62d",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 225,
    "id": "c102974c",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 226,
    "id": "0cece8ce",
    "metadata": {},
    "outputs": [
@@ -863,6 +863,288 @@
     "\n",
     "#df_2 = df[df['Line']=='Line_1']['Get_Off']\n",
     "#print(df_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c875b90",
+   "metadata": {},
+   "source": [
+    "📝 [제1유형] 대기오염 데이터 분석\n",
+    "문제 1. (이상치 처리 & 조건부 평균) PM10 컬럼에는 센서 오류로 인해 **0보다 작은 값(음수)**이 포함되어 있습니다. 이 **음수 값을 이상치로 간주하여 제거(필터링)**한 데이터를 기준으로, **'City_A'**의 PM10 평균을 구하시오. (단, 소수점 이하는 버리고 **정수(int)**로 출력하시오.)\n",
+    "\n",
+    "문제 2. (시계열 추출 & Groupby) Date 컬럼에서 '시간(Hour)' 정보를 추출합니다. 전체 도시를 통틀어, 오전 10시(10)부터 오후 3시(15) 사이(10시, 15시 포함) 시간대의 PM2.5 평균 농도를 구하시오. (단, PM2.5의 결측치는 제거하고 계산하며, 소수점 셋째 자리에서 반올림하여 둘째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 3. (결측치 보간 & 복합 조건) PM2.5 컬럼의 결측치를 **전체 데이터의 중앙값(median)**으로 채웁니다. 그 후, '나쁨' 상태인 데이터를 찾으려고 합니다.\n",
+    "\n",
+    "조건 1: PM10이 80 이상\n",
+    "\n",
+    "조건 2: PM2.5가 35 이상 위 **두 조건 중 하나라도 만족(OR)**하는 데이터의 **행 개수(row count)**를 구하시오. (단, 문제 1번에서 언급한 PM10의 음수 이상치는 미리 제거된 상태에서 진행하시오.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "44a0069a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "                 Date    City       PM10      PM2.5       Temp\n",
+      "0 2023-01-01 00:00:00  City_C  41.395782  25.009453  28.385131\n",
+      "1 2023-01-01 01:00:00  City_C  49.862120  25.841500  -3.906242\n",
+      "2 2023-01-01 02:00:00  City_C  36.678939  18.679058  35.055428\n",
+      "3 2023-01-01 03:00:00  City_C  66.587579  40.386310  10.693343\n",
+      "4 2023-01-01 04:00:00  City_A  45.675755  25.241757   6.889414\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 2000\n",
+    "\n",
+    "# 1. 데이터 생성\n",
+    "dates = pd.date_range('2023-01-01', periods=n_rows, freq='h')\n",
+    "cities = np.random.choice(['City_A', 'City_B', 'City_C', 'City_D'], n_rows)\n",
+    "\n",
+    "# PM10: 평균 50, 표준편차 20 (가끔 센서 오류로 -999 값 발생)\n",
+    "pm10 = np.random.normal(50, 20, n_rows)\n",
+    "error_indices = np.random.choice(range(n_rows), 20, replace=False)\n",
+    "pm10[error_indices] = -999 # 센서 오류 값\n",
+    "\n",
+    "# PM2.5: PM10의 약 60% 수준 (결측치 발생)\n",
+    "pm25 = pm10 * 0.6 + np.random.normal(0, 5, n_rows)\n",
+    "nan_indices = np.random.choice(range(n_rows), 50, replace=False)\n",
+    "pm25[nan_indices] = np.nan # 결측치\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Date': dates,\n",
+    "    'City': cities,\n",
+    "    'PM10': pm10,\n",
+    "    'PM2.5': pm25,\n",
+    "    'Temp': np.random.normal(15, 10, n_rows)\n",
+    "})\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "99804810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "#df.loc[df['PM10'] < 0, 'PM10'] = 0\n",
+    "q1 = df[df['PM10'] >= 0]\n",
+    "q2 = q1.groupby('City')['PM10'].mean()\n",
+    "print(int(q2.loc['City_A']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "605c8b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2번\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "df['Hour'] = df['Date'].dt.hour\n",
+    "df_t = df[(df['Hour'] >= 10) & (df['Hour'] <= 15)]\n",
+    "result = df_t['PM2.5'].mean()\n",
+    "print(round(result, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "id": "f116fc65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "706\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3번\n",
+    "df = df[df['PM10'] >= 0]\n",
+    "\n",
+    "#print(df['PM2.5'].isna().sum())\n",
+    "med = df['PM2.5'].median()\n",
+    "df['PM2.5'] = df['PM2.5'].fillna(med)\n",
+    "\n",
+    "df_filter = df[(df['PM10'] >= 80) | (df['PM2.5'] >= 35)]\n",
+    "print(len(df_filter))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e81a038",
+   "metadata": {},
+   "source": [
+    "📝 [제1유형] 쇼핑몰 배송/판매 분석\n",
+    "문제 1. (순위 구하기 - Rank) 'Tech' 카테고리의 데이터만 추출합니다. 매출액(Sales)이 높은 순서대로 **순위(Rank)**를 매길 때, **상위 10위 (1등~10등)**에 해당하는 데이터들의 Sales 평균을 구하시오. (단, 동점자가 있을 경우 'min' 방식(예: 1등이 2명이면 둘 다 1등, 다음은 3등)으로 순위를 매기며, 결과는 정수(int)로 출력하시오.)\n",
+    "\n",
+    "문제 2. (날짜 차이 계산 - Timedelta) 주문일(Order_Date)로부터 배송일(Ship_Date)까지 걸린 기간을 **'Delivery_Days'**라고 합니다. (Ship_Date - Order_Date) 전체 데이터 중 Delivery_Days가 **3일 이내(<= 3일)**인 데이터의 비율(%)을 구하시오. (단, 결과는 백분율로 변환하지 말고 0~1 사이 비율 그대로 소수점 셋째 자리에서 반올림하여 둘째 자리까지 출력하시오.)\n",
+    "\n",
+    "문제 3. (그룹별 변동폭 - Diff) 각 상품(Product)별로 주문 날짜(Order_Date) 순서대로 정렬했을 때, 이전 판매량(Quantity) 대비 현재 판매량의 **차이(절댓값)**가 가장 컸던 값을 찾으시오. 즉, 모든 상품을 통틀어 **\"전번 주문 대비 판매량 변동폭\"**의 최댓값을 구하시오. (단, 각 상품의 첫 번째 주문은 이전 데이터가 없으므로 무시합니다.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "id": "f98b1f3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "  Order_Date  Ship_Date   Category Product  Sales  Quantity\n",
+      "0 2023-01-01 2023-01-03       Tech  Prod_8  41930         4\n",
+      "1 2023-01-01 2023-01-06       Tech  Prod_5  31530         2\n",
+      "2 2023-01-01 2023-01-07  Furniture  Prod_8  65670         5\n",
+      "3 2023-01-03 2023-01-07     Office  Prod_1  88220         8\n",
+      "4 2023-01-03 2023-01-05     Office  Prod_5  94630         8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 1000\n",
+    "\n",
+    "# 1. 데이터 생성\n",
+    "order_dates = pd.date_range('2023-01-01', '2023-12-31', freq='D')\n",
+    "order_dates = np.random.choice(order_dates, n_rows)\n",
+    "\n",
+    "# 배송일은 주문일로부터 1~7일 후\n",
+    "ship_days = np.random.randint(1, 8, n_rows)\n",
+    "ship_dates = [pd.to_datetime(d) + pd.Timedelta(days=i) for d, i in zip(order_dates, ship_days)]\n",
+    "\n",
+    "products = [f'Prod_{i}' for i in range(1, 11)] # 상품 10개\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Order_Date': order_dates,\n",
+    "    'Ship_Date': ship_dates,\n",
+    "    'Category': np.random.choice(['Furniture', 'Office', 'Tech'], n_rows),\n",
+    "    'Product': np.random.choice(products, n_rows),\n",
+    "    'Sales': np.random.randint(100, 10000, n_rows) * 10,\n",
+    "    'Quantity': np.random.randint(1, 10, n_rows)\n",
+    "})\n",
+    "\n",
+    "# 날짜 정렬\n",
+    "df = df.sort_values('Order_Date').reset_index(drop=True)\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "id": "9bdadf28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97513\n",
+      "97513\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "df_tech = df[df['Category']=='Tech'].sort_values(by='Sales', ascending=False)\n",
+    "print(int(df_tech['Sales'].head(10).mean()))\n",
+    "\n",
+    "# 정석 풀이\n",
+    "df_tech = df[df['Category']=='Tech'].copy()\n",
+    "df_tech['Rank'] = df_tech['Sales'].rank(method='min', ascending=False)\n",
+    "result = df_tech[df_tech['Rank'] <= 10]['Sales'].mean()\n",
+    "print(int(result))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "id": "fa78597e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2번\n",
+    "df['Order_Date'] = pd.to_datetime(df['Order_Date'])\n",
+    "df['Ship_Date'] = pd.to_datetime(df['Ship_Date'])\n",
+    "df['Delivery_Days'] = (df['Ship_Date'] - df['Order_Date']).dt.days\n",
+    "\n",
+    "inner_len = len(df[df['Delivery_Days'] <= 3])\n",
+    "df_len = len(df)\n",
+    "result = inner_len / df_len\n",
+    "print(round(result, 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "id": "7f83e558",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3번\n",
+    "df = df.sort_values(by=['Product', 'Order_Date'])\n",
+    "df['Vol_Diff'] = df.groupby('Product')['Quantity'].diff()\n",
+    "df['Vol_Diff_Abs'] = df['Vol_Diff'].abs()\n",
+    "print(int(df['Vol_Diff_Abs'].max()))"
    ]
   },
   {
@@ -906,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 229,
    "id": "c2a02fd7",
    "metadata": {},
    "outputs": [
@@ -993,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 230,
    "id": "fdd15584",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 231,
    "id": "9bcb496c",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 232,
    "id": "13724801",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 233,
    "id": "18d8d25e",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 234,
    "id": "00ab57ed",
    "metadata": {},
    "outputs": [
@@ -1409,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 235,
    "id": "75ccdee3",
    "metadata": {},
    "outputs": [
@@ -1463,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 236,
    "id": "9674ec91",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 237,
    "id": "87fb4fe3",
    "metadata": {},
    "outputs": [
@@ -1514,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 238,
    "id": "5184f4f8",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 239,
    "id": "7edf1e5b",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 240,
    "id": "ab9697e4",
    "metadata": {},
    "outputs": [
@@ -1638,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 241,
    "id": "8557132c",
    "metadata": {},
    "outputs": [
@@ -1665,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 242,
    "id": "4341ef4b",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 243,
    "id": "6f7434c7",
    "metadata": {},
    "outputs": [
@@ -1749,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 244,
    "id": "2cc46efd",
    "metadata": {},
    "outputs": [
@@ -1799,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 245,
    "id": "bbd2aef9",
    "metadata": {},
    "outputs": [
@@ -1844,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "id": "7d4f428b",
    "metadata": {},
    "outputs": [
@@ -1868,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 247,
    "id": "e2664382",
    "metadata": {},
    "outputs": [
@@ -1889,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 248,
    "id": "d713e54d",
    "metadata": {},
    "outputs": [
@@ -1928,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 249,
    "id": "12636bf8",
    "metadata": {},
    "outputs": [
@@ -1980,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 250,
    "id": "9bb42917",
    "metadata": {},
    "outputs": [
@@ -2029,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 251,
    "id": "55e77ec6",
    "metadata": {},
    "outputs": [
@@ -2077,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 252,
    "id": "891dd5b4",
    "metadata": {},
    "outputs": [
@@ -2125,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 253,
    "id": "9174c0fe",
    "metadata": {},
    "outputs": [
@@ -2166,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 254,
    "id": "3c23aa5c",
    "metadata": {},
    "outputs": [
