--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -1149,6 +1149,167 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cddaf763",
+   "metadata": {},
+   "source": [
+    "📝 [제1유형] 인사 데이터 분석\n",
+    "문제 1. (날짜 연산 & 조건 필터링) 기준일(2023-12-31)을 기준으로 각 직원의 **근속 일수(Days)**를 계산하여 Tenure_Days 컬럼을 만드시오. (기준일 - 입사일) 'IT' 부서이면서 근속 일수가 2000일 이상인 직원들의 Salary 평균을 구하시오. (단, 정수(int)로 출력하시오.)\n",
+    "\n",
+    "문제 2. (그룹별 결측치 대치 & 이상치 탐색) Performance 컬럼의 결측치를 **각 Dept(부서)별 평균(mean)**으로 채우시오. 결측치 처리가 완료된 후, 전체 데이터에서 Performance 점수가 **상위 10% 이상(>= 0.9 quantile)**인 직원들의 Salary **중앙값(median)**을 구하시오. (단, 정수(int)로 출력하시오.)\n",
+    "\n",
+    "문제 3. (복합 조건 파생변수 & 빈도수) 성과급(Bonus) 지급 여부를 결정하려고 합니다. 다음 조건에 따라 Bonus_Target 컬럼(값: 'Yes' 또는 'No')을 생성하시오.\n",
+    "\n",
+    "조건: Performance가 80점 이상이면서(&), Resigned가 'No'(재직 중)인 경우 -> 'Yes'\n",
+    "\n",
+    "그 외 -> 'No' (단, Performance는 문제 2번에서 결측치가 채워진 상태를 사용합니다.)\n",
+    "\n",
+    "'Sales' 부서 중에서 Bonus_Target이 'Yes'인 직원의 **비율(%)**을 구하시오. (단, 비율은 0~1 사이가 아닌 백분율(0~100) 값으로 구하고, 소수점 첫째 자리에서 반올림하여 정수로 출력하시오. 예: 35.6% -> 36)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "id": "43fa023c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료!\n",
+      "   Emp_ID  Join_Date       Dept  Salary  Performance Resigned\n",
+      "0    1571 2010-01-03      Sales   47415          NaN       No\n",
+      "1    1817 2010-01-04      Sales   53906          NaN       No\n",
+      "2    1404 2010-01-11      Sales   50867    46.607205       No\n",
+      "3    1762 2010-01-23         HR   51014    85.817097       No\n",
+      "4    1253 2010-01-27  Marketing   52050          NaN       No\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(2025)\n",
+    "n_rows = 1000\n",
+    "\n",
+    "# 1. 데이터 생성\n",
+    "join_dates = pd.date_range('2010-01-01', '2023-12-31', freq='D')\n",
+    "join_dates = np.random.choice(join_dates, n_rows)\n",
+    "\n",
+    "depts = ['Sales', 'IT', 'HR', 'Marketing']\n",
+    "salary_base = {'Sales': 50000, 'IT': 70000, 'HR': 45000, 'Marketing': 55000}\n",
+    "\n",
+    "dept_list = np.random.choice(depts, n_rows)\n",
+    "salary_list = [int(np.random.normal(salary_base[d], 5000)) for d in dept_list]\n",
+    "\n",
+    "# Performance: 평균 70, 표준편차 15 (결측치 10% 주입)\n",
+    "perf_scores = np.random.normal(70, 15, n_rows)\n",
+    "perf_scores = np.clip(perf_scores, 0, 100) # 0~100 제한\n",
+    "nan_idx = np.random.choice(range(n_rows), 100, replace=False)\n",
+    "perf_scores[nan_idx] = np.nan\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Emp_ID': range(1001, 1001 + n_rows),\n",
+    "    'Join_Date': join_dates,\n",
+    "    'Dept': dept_list,\n",
+    "    'Salary': salary_list,\n",
+    "    'Performance': perf_scores,\n",
+    "    'Resigned': np.random.choice(['Yes', 'No'], n_rows, p=[0.1, 0.9])\n",
+    "})\n",
+    "\n",
+    "# 날짜 정렬\n",
+    "df = df.sort_values('Join_Date').reset_index(drop=True)\n",
+    "\n",
+    "print(\"데이터 생성 완료!\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "id": "52a8fa0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69682\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1번\n",
+    "current = '2023-12-31'\n",
+    "current = pd.to_datetime(current)\n",
+    "df['Join_Date'] = pd.to_datetime(df['Join_Date'])\n",
+    "df['Tenure_Days'] = (current - df['Join_Date']).dt.days\n",
+    "result = df[(df['Tenure_Days'] >= 2000) & (df['Dept']=='IT')]['Salary'].mean()\n",
+    "print(int(result))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "id": "60e7c545",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54004\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2번\n",
+    "fill_nan = df.groupby('Dept')['Performance'].transform('mean')\n",
+    "df['Performance'] = df['Performance'].fillna(fill_nan)\n",
+    "#print(df['Performance'].isna().sum())\n",
+    "top10 = df['Performance'].quantile(0.9)\n",
+    "result = df[df['Performance'] >= top10]['Salary'].median()\n",
+    "print(int(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "id": "0e44536c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3번\n",
+    "#def bonus_target(performance, resigned):\n",
+    "    #if (performance >= 80) & (resigned == 'No'): return 'Yes'\n",
+    "    #else: return 'No'\n",
+    "#df['Bonus_Target'] = df[['Performance', 'Resigned']].apply(bonus_target)\n",
+    "#print(df.head())\n",
+    "\n",
+    "cond = (df['Performance'] >= 80) & (df['Resigned'] == 'No')\n",
+    "df['Bonus_Target'] = np.where(cond, 'Yes', 'No')\n",
+    "\n",
+    "sales_df = df[df['Dept'] == 'Sales']\n",
+    "\n",
+    "yes_count = len(sales_df[sales_df['Bonus_Target'] == 'Yes'])\n",
+    "total_count = len(sales_df)\n",
+    "\n",
+    "ratio = (yes_count / total_count) * 100\n",
+    "\n",
+    "print(int(ratio))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6287f64d",
    "metadata": {},
    "source": [
