--- a/Test_Practice/Past_Question/9/9_code.ipynb
+++ b/Test_Practice/Past_Question/9/9_code.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "751d8fb4",
    "metadata": {},
    "outputs": [
@@ -54,31 +54,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     연도    구분  범죄유형1  범죄유형2  범죄유형3  범죄유형4  범죄유형5  범죄유형6  범죄유형7  범죄유형8  범죄유형9  \\\n",
-      "0  2000  발생건수    302    635    470    306    271    900    220    814    321   \n",
-      "1  2000  검거건수    302    430    470    187    271    199    220    230    321   \n",
-      "2  2001  발생건수    969    543    691    613    585    391    476    360    659   \n",
-      "3  2001  검거건수    121    352    691    613    574    158    476    360    575   \n",
-      "4  2002  발생건수    982    389    886    762    766    443    704    330    684   \n",
-      "\n",
-      "   범죄유형10  \n",
-      "0     666  \n",
-      "1     408  \n",
-      "2     513  \n",
-      "3     513  \n",
-      "4     846  \n"
+      "각 연도별 최대 검거율을 가진 범죄유형들의 검거건수 총합: 9879.0\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "# 데이터 불러오기\n",
     "df = pd.read_csv('9_1_2.csv')\n",
-    "print(df.head())\n",
     "\n",
-    "df_occur = df[df['구분']=='발생건수'].set_index('연도').drop(columns='구분')\n",
-    "df_arrest = df[df['구분']=='검거건수'].set_index('연도').drop(columns='구분')\n",
+    "# '발생건수'와 '검거건수' 데이터 분리\n",
+    "df_occur = df[df['구분'] == '발생건수']\n",
+    "df_arrest = df[df['구분'] == '검거건수']\n",
     "\n",
-    "ratio = df_occur / df_arrest\n"
+    "# 데이터를 연도와 범죄유형별로 재구조화 (melt)\n",
+    "df_occur_melted = df_occur.melt(id_vars=['연도'], var_name='범죄유형', value_name='발생건수')\n",
+    "df_arrest_melted = df_arrest.melt(id_vars=['연도'], var_name='범죄유형', value_name='검거건수')\n",
+    "\n",
+    "# 두 데이터프레임 병합\n",
+    "df_merged = pd.merge(df_occur_melted, df_arrest_melted, on=['연도', '범죄유형'])\n",
+    "\n",
+    "# '발생건수'와 '검거건수'를 숫자형으로 변환 (에러 발생 시 NaN 처리)\n",
+    "df_merged['발생건수'] = pd.to_numeric(df_merged['발생건수'], errors='coerce')\n",
+    "df_merged['검거건수'] = pd.to_numeric(df_merged['검거건수'], errors='coerce')\n",
+    "\n",
+    "# 검거율 계산\n",
+    "df_merged['검거율'] = df_merged['검거건수'] / df_merged['발생건수']\n",
+    "\n",
+    "# 각 연도별 최대 검거율을 가진 범죄유형 찾기\n",
+    "idx = df_merged.groupby(['연도'])['검거율'].idxmax()\n",
+    "max_arrest_rate_crimes = df_merged.loc[idx]\n",
+    "\n",
+    "# 해당 범죄유형들의 검거건수 총합 계산\n",
+    "total_arrest_count = max_arrest_rate_crimes['검거건수'].sum()\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(f\"각 연도별 최대 검거율을 가진 범죄유형들의 검거건수 총합: {total_arrest_count}\")"
    ]
   },
   {
@@ -91,6 +103,107 @@
     "훈련 데이터로 학습한 모델을 테스트 데이터에 적용하여 예측한 결과를 제출하시오.\n",
     "(Target: 농업유형(다중분류, {0,1,2}))\n",
     "% 제출 형식은 ID, pred 두 칼럼만 존재해야 한다.(평가 지표: Marco F1 Score )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a56e063",
+   "metadata": {},
+   "source": [
+    "제 3유형\n",
+    "\n",
+    "1. 모든 칼럼을 활용하여 design을 예측하는 다중회귀 분석을 시행한 후 유의하지 않은 설명변수 개수를 구하시오.(패널티는 포함되지 않으며, 모델의 절편항은 포함)\n",
+    "\n",
+    "데이터 분리 조건:\n",
+    "\n",
+    "훈련 데이터: id1~id140\n",
+    "\n",
+    "테스트 데이터: id141~id200\n",
+    "\n",
+    "\n",
+    "2. 훈련 데이터(학습용 데이터)의 예측값과 실제값의 피어슨 상관계수를 구하시오.\n",
+    "\n",
+    "3. 적합한 모델을 활용하여 테스트 데이터에서의 RMSE를 구하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c0d6c759",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0.914750154303963\n",
+      "1.9040871878347285\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('9_3_1.csv')\n",
+    "#print(df.head())\n",
+    "\n",
+    "from statsmodels.formula.api import ols\n",
+    "train = df[df['id'] <= 140]\n",
+    "test = df[df['id'] > 140]\n",
+    "model = ols('design ~ tenure + f2 + f3 + f4 + f5', data=train).fit()\n",
+    "\n",
+    "#print(model.summary())\n",
+    "var_count = (model.pvalues[1:] > 0.05).sum()\n",
+    "print(var_count)\n",
+    "\n",
+    "from scipy.stats import pearsonr\n",
+    "pred = model.predict(train)\n",
+    "corr, p_val = pearsonr(train['design'], pred)\n",
+    "print(corr)\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "import numpy as np\n",
+    "test_pred = model.predict(test)\n",
+    "rmse = np.sqrt(mean_absolute_error(test['design'], test_pred))\n",
+    "print(rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4cc75e76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.640721\n",
+      "         Iterations 5\n",
+      "0.0\n",
+      "1.8671\n",
+      "450\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('9_3_2.csv')\n",
+    "#print(df.head())\n",
+    "\n",
+    "from statsmodels.formula.api import logit\n",
+    "model = logit('churn ~ col1 + col2 + Phone_Service + Tech_Insurance', data=df).fit()\n",
+    "p_val = model.pvalues['col1']\n",
+    "print(round(p_val, 4))\n",
+    "\n",
+    "import numpy as np\n",
+    "odds_ratio = np.exp(model.params['Phone_Service'])\n",
+    "print(round(odds_ratio, 4))\n",
+    "\n",
+    "pred = model.predict(df)\n",
+    "count = (pred >=0.3).sum()\n",
+    "print(count)\n"
    ]
   }
  ],
